# pill_game

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
cmake_crap/: msvc.cmake
src/assets/: audio_cmd.txt
src/pill_game/: board.cpp  board.h  game.cpp  game.h  logging.cpp  main.cpp  pch.h  stb_init.cpp
src/pill_game/game/: bag_random.cpp  bag_random.h  board.cpp  board.h  board_entity.cpp  board_entity.h  board_piece.cpp  board_piece.h  game_renderer.cpp  game_renderer.h  game_renderer_audio.cpp  game_renderer_gameplay.cpp  game_renderer_init.cpp  game_renderer_util.cpp
src/pill_game/util/: logging.cpp  logging.h
